# Wallpepora

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/: CODEOWNERS
.github/workflows/: ci.yml
docs/: conf.py  index.md
include/gui/: main_window.hpp
src/: main.cpp
src/gui/: main_window.cpp
tools/: ci
